# db2-full-stack

./: README.md
bd2-backend/: pyproject.toml
bd2-backend/app/: __init__.py  controlers.py  dtos.py  models.py  repositories.py
bd2-backend/migrations/: env.py
bd2-backend/migrations/versions/: 2c68bdc132be_add_authors_date_of_birth.py
db2-backend/: README.md
db2-backend/app/: __init__.py  controlers.py  dtos.py  models.py  repositories.py
db2-backend/migrations/versions/: 0498fe435f4a_add_loan_client_and_other_improvements.py  6dd707801380_init_db.py
db2-frontend/: .eslintrc.cjs  .eslintrc.yaml  .prettierrc.cjs  .prettierrc.yaml  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
db2-frontend/src/: App.vue  api.ts  interfaces.ts  main.ts
db2-frontend/src/api/: index.ts  utilities.ts
db2-frontend/src/components/: BookCard.vue  Header.vue
db2-frontend/src/components/forms/: BookForm.vue
db2-frontend/src/router/: index.ts
db2-frontend/src/views/: Home.vue  ListBooks.vue  NewBook.vue
db2-frontend/src/views/books/: EditBook.vue  ListBooks.vue  NewBook.vue  ViewBook.vue
